# obs_recording_notifier

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  recording_notifier.cpp  recording_notifier.hpp
